--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ numpy==1.21.4
 pandas==1.1.3
 networkx==2.6.3
 matplotlib==3.3.2
+pytest==5.4.3
 boost
 breathe==4.20.0
 commonmark==0.9.1
@@ -11,3 +12,4 @@ sphinx_rtd_theme==0.5.0
 sphinxcontrib-moderncmakedomain==3.13
 sphinxcontrib-svg2pdfconverter==1.1.0
 dionysus==2.0.8
+scipy==1.5.2
